--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -15,13 +15,10 @@
         <a href=""> CREAR PAQUETE</a>
         <form action="/crear" method="POST" enctype="multipart/form-data"> 
         <div>
-            <label for="">Nombre</label>
+            <label for="">Titulo</label>
             <input type="text" name="title">
         </div>
-        <div>
-            <label for="">Nombre paquete</label>
-            <input type="text" name="product_name">
-        </div>
+       
         <div>
             <label for="">Imagen</label>
             <input type="file" name="image" id="image">
