--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -10,16 +10,15 @@
     </header>
 
         <h2>Detalle de productos</h2>
-        <div class='products'>
-            <%products.forEach(product => { %>
-                <p class='product'>
-                    <img src="<%=product.image%>" height="100"/> <br>
-                    <a href='/products/<%= product.id%>'><%=product.name%> ( <%= product.price%>)
-                    </a>
-                    </p>
-          <% }) %>
-        </div>
+        <h2><%= product.title %></h2>
 
+        <div class="product-info">
+        <p>Precio: <%= product.price %> </p>
+        <p>Imagen: </p>
+        <img src=" <%= product.image %>" alt="">
+
+        <p>Descripción: <%= product.description %> </p>
+                                            </div>
 <footer>
     <%- include('../partials/footer.ejs') %>
 </footer>
