--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,13 +7,16 @@
 <body>
     <header>
         <%- include('partials/header.ejs') %>
-        <div> Administrador </div>
+
+        <!-- SECCION ADMINISTRADOR -->
+        <hr>
+        <h2> Sección administrador </h2>
         <ul>
-            <li><a href="/crear">Crear paquete </a> </li>
-            <li><a href="/lista">Listado de paquetes </a> </li>
-            <li><a href="/edit">Editar paquetes</a> </li>
+            <li><a href="/lista">Administrar paquetes </a> </li>
+            
             <li><a href="/userList">Administrar usuarios</a> </li>
         </ul>
+        <hr>
     </header>
 
 
@@ -29,6 +32,7 @@
   
 
 <!--SUR PAQUETE1-->
+
         <div class="pic-item">
             <img src="/images/barilo2.jpg" alt="picture">
             <div class="button">
@@ -73,7 +77,9 @@
             <div class="button">
                 <button class= btn sm btn-pink-outline>
                     <a href="/paquete3">+INFO</a>
+
                 </button>
+                
             </div>
 
             <p>
@@ -90,8 +96,10 @@
 
 
         </div>
+     
 
         <!-- PARTE CON BD -->
+        
         
 
   
