--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -14,11 +14,22 @@
 
         <div class="product-info">
         <p>Precio: <%= product.price %> </p>
-        <p>Imagen: </p>
-        <img src=" <%= product.image %>" alt="">
+        <p><img src=" <%= product.image %>" alt=""></p>
 
-        <p>Descripción: <%= product.description %> </p>
-                                            </div>
+        <p>Descripción del paquete: <%= product.description %> </p>
+        <article class="include">
+
+            <i class="fas fa-fly"></i>
+
+
+            <p>Nuestro paquete incluye;</p>
+            <div class="items"><i class="fas fa-plane"></i>Avion</div>
+            <div class="items"><i class="fas fa-car"></i>Traslados</div>
+            <div class="items"> <i class="fas fa-concierge-bell"></i>Alojamiento</div>
+        </article>
+
+        <br>
+                                            
 <footer>
     <%- include('../partials/footer.ejs') %>
 </footer>
