--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -84,10 +84,10 @@
                                 <div class="field">
                                     <label for="category">Categoría</label>
                                     <div class="control">
-                                        <select name="category" id="category">
+                                        <select name="category_id" id="category_id">
                                             <option value="">Seleccione una opción</option>
-                                            <option value="Administrador">Administrador</option>
-                                            <option value="Viajero">Viajero</option>
+                                            <option value="1">Administrador</option>
+                                            <option value="2">Viajero</option>
                                         </select>
                                     </div>
                                     <p class="feedback"></p>
