--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,21 +5,8 @@
     <link rel="stylesheet" href="css/products.css">
 </head>
 <body>
-    <header>
-        <%- include('partials/header.ejs') %>
 
-        <!-- SECCION ADMINISTRADOR -->
-        <hr>
-        <h2> Sección administrador </h2>
-        <ul>
-            <li><a href="/lista">Administrar paquetes </a> </li>
-            
-            <li><a href="/userList">Administrar usuarios</a> </li>
-        </ul>
-        <hr>
-    </header>
-
-
+    <%- include('partials/header.ejs') %>
     <main>
 
      
@@ -37,12 +24,12 @@
             <img src="/images/barilo2.jpg" alt="picture">
             <div class="button">
                 <button class= btn sm btn-pink-outline>
-                    <a href="/paquete1">+INFO</a>
+                    <a href="/lista/1">+INFO</a>
                 </button>
             </div>
 
             <p>
-               <nav><a href="/paquete1">Patagonia en verano</a></nav> 
+               <nav><a href="/lista/1">Patagonia en verano</a></nav> 
 
             </p>
             <div class="card-text">
@@ -57,11 +44,11 @@
             <img src="/images/norte2.jpg" alt="picture">
             <div class="button">
                 <button class= btn sm btn-pink-outline>
-                    <a href="/paquete2">+INFO</a>
+                    <a href="/lista/2">+INFO</a>
                 </button>
             </div>
                <p>
-                    <nav><a href="/paquete2">Recorriendo el norte: Jujuy 360°</a></nav> 
+                    <nav><a href="/lista/2">Recorriendo el norte: Jujuy 360°</a></nav> 
                 </p>
                 <div class="card-text">
                     <p>Conocé todos los pasiajes del norte y sus atracciones.</p>
@@ -76,14 +63,14 @@
             <img src="images/vino2.jpg" alt="picture">
             <div class="button">
                 <button class= btn sm btn-pink-outline>
-                    <a href="/paquete3">+INFO</a>
+                    <a href="/lista/3">+INFO</a>
 
                 </button>
                 
             </div>
 
             <p>
-                <nav><a href="/paquete3">La ruta del vino en mendoza</a></nav> 
+                <nav><a href="/lista/3">La ruta del vino en mendoza</a></nav> 
             </p>
             <div class="card-text">
                 <p>Conocé las mejores bodegas de la región</p>
@@ -110,73 +97,3 @@
 </footer>
 </body>
 </html>
-
-
-      <!--TODO ANTERIOR 
-        <div class="box">
-            <h2> Turisteamos en:  </h2>
-            <Script language="JavaScript">
-                function goto(form) { var index=form.select.selectedIndex
-                if (form.select.options[index].value != "0") {
-                location=form.select.options[index].value;}} 
-            </SCRIPT>
-              <FORM NAME="form1">
-            <SELECT NAME="select" ONCHANGE="goto(this.form)" SIZE="1">
-                <OPTION VALUE="">-------Elegí la provincia a la que deseas viajar-------
-                <option value="Ciudad Autonoma de Buenos Aires">Ciudad Autonoma de Buenos Aires</option> 
-                <option value="/buenosaires">Buenos Aires</option> 
-                <option value="Catamarca">Catamarca</option>
-                <option value="Chaco">Chaco</option>
-                <option value="Chubut">Chubut</option>
-                <option value="Córdoba">Córdoba</option>
-                <option value="Corrientes">Corrientes</option>
-                <option value="Entre Ríos">Entre Ríos</option>
-                <option value="Formosa">Formosa</option>
-                <option value="Jujuy">Jujuy</option>
-                <option value="La Pampa">La Pampa</option>
-                <option value="La Rioja">La Rioja</option>
-                <option value="Mendoza">Mendoza</option>
-                <option value="Misiones">Misiones</option>
-                <option value="Neuquén">Neuquén</option>
-                <option value="Rio Negro">Rio Negro</option>
-                <option value="Salta">Salta</option>
-                <option value="San Juan">San Juan</option>
-                <option value="San Luis">San Luis</option>
-                <option value="Santa Cruz">Santa Cruz</option>
-                <option value="Santa Fe">Santa Fe</option>
-                <option value="Santiago del Estero">Santiago del Estero</option> 
-                <option value="Tierra del Fuego">Tierra del Fuego</option> 
-                <option value="Tucumán">Tucumán</option> 
-             </select>
-         </div>
-
-
-  -->   
-           
-
-            
-  
-         <!--MAPA
-    <section class="mapa" > 
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script type="text/javascript" src="/public/map/jquery.vmap.js"></script>
-        <script type="text/javascript" src="/public/map/jquery.vmap.argentina.js" charset="utf-8"></script>
-        <script>
-         jQuery(document).ready(function () {
-            jQuery('#vmap').vectorMap({
-             map: 'argentina_en',
-            onRegionClick: function (element, code, region) {
-             var message = 'Elegiste '
-               + region
-                            
-               alert(message);
-             }
-         });
-        });
-        </script>
-    </section>
-    <h2> MAPA PARA HACER CLICK EN LA CIUDAD</h2>
-        <div class ="map"> 
-         <div id="vmap" style="width: 800px; height: 900px; opacity: 0.8;"></div>
-        </div>
-    -->
