--- a/src/views/index-admin.ejs
+++ b/src/views/index-admin.ejs
@@ -12,7 +12,7 @@
         <hr>
         <h2> Sección administrador </h2>
         <ul>
-            <li><a href="/lista">Administrar paquetes </a> </li>
+            <li><a href="/admin/lista">Administrar paquetes </a> </li>
             
             <li><a href="/userList">Administrar usuarios</a> </li>
         </ul>
