--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -17,6 +17,7 @@
             <a href="/register"> Registrate </a>
             <span class="separador">|
             <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
+            <a href="/index-admin">Sección para administradores</a>
             </div>
           </nav>
           
