--- a/src/views/users/detail.ejs
+++ b/src/views/users/detail.ejs
@@ -11,21 +11,22 @@
 
 <main>
     <div class="container">
+        <h1>Tu perfil <%= users.first_name %></h1>
     <article class="card">
         <div class="card-left">
             <figure>
-                <img src="/images/users/<%= user.image ? user.image : 'default.png' %>" alt="">
+                <img src="/images/users/<%= users.image %>" alt="">
             </figure>
-            <h3>#<%= user.id %></h3>
+            <h3>#<%= users.id %></h3>
         </div>
         <div class="card-content">
-            <h3><%= user.first_name %> <%= user.last_name %></h3>
-            <p>Categoría: <%= user.category %></p>
-            <p>Email: <a href="mailto:<%= user.email %>" target="_blank"><%= user.email %></a></p>
+            <h3><%= users.first_name %> <%= users.last_name %></h3>
+            <p>Categoría: <%= users.category %></p>
+            <p>Email: <a href="mailto:<%= users.email %>" target="_blank"><%= users.email %></a></p>
             <div>
                
-                <a class="button is-warning" href="/userList/<%= user.id %>/edit">Editar</a>
-                <form class="form is-inline" action="/userList/<%= user.id %>?_method=delete" method="POST">
+                <a class="button is-warning" href="/userList/<%= users.id %>/edit">Editar</a>
+                <form class="form is-inline" action="/userList/<%= users.id %>?_method=delete" method="POST">
                     <button class="button is-danger">Borrar</button>
                 </form>
 
