--- a/src/views/users/userList.ejs
+++ b/src/views/users/userList.ejs
@@ -9,7 +9,7 @@
 
 <main>
     <div class="container">
-        <h1><%= title %></h1>
+        <h1>Lista Usuarios</h1>
 
         <% users.forEach(user => { %>
             <article class="card">
