--- a/src/views/users/detail.ejs
+++ b/src/views/users/detail.ejs
@@ -11,7 +11,7 @@
 
 <main>
     <div class="container">
-        <h1>Tu perfil <%= users.first_name %></h1>
+        <h1> <%= users.first_name %></h1>
     <article class="card">
         <div class="card-left">
             <figure>
