--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -15,12 +15,12 @@
                 <div class="columns is-centered">
                     <div class="column is-6">
                         <h1>Editar usuario</h1>
-                        <form action="/users/<%= user.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+                        <form action="/users/<%= users.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
 
                             <div class="field">
                                 <label for="first_name">Nombre</label>
                                 <div class="control">
-                                    <input type="text" name="first_name" id="first_name" value="<%= user.first_name %>">
+                                    <input type="text" name="first_name" id="first_name" value="<%= users.first_name %>">
                                 </div>
                                 <p class="feedback is error">Un error</p>
                             </div>
@@ -28,7 +28,7 @@
                             <div class="field">
                                 <label for="last_name">Apellido</label>
                                 <div class="control">
-                                    <input type="text" name="last_name" id="last_name" value="<%= user.last_name %>">
+                                    <input type="text" name="last_name" id="last_name" value="<%= users.last_name %>">
                                 </div>
                                 <p class="feedback"></p>
                             </div>
@@ -36,13 +36,14 @@
                             <div class="field">
                                 <label for="email">Email</label>
                                 <div class="control">
-                                    <input type="text" name="email" id="email" value="<%= user.email %>">
+                                    <input type="text" name="email" id="email" value="<%= users.email %>">
                                 </div>
                                 <p class="feedback"></p>
                             </div>
 
                             <div class="field">
                                 <label for="image">Imagen de perfil</label>
+                                <img src="/images/users/<%= users.image %>" alt="">
                                 <div class="control">
                                     <input type="file" name="image" id="image">
                                 </div>
@@ -52,7 +53,7 @@
                             <div class="field">
                                 <label for="password">Password</label>
                                 <div class="control">
-                                    <input type="password" name="password" id="password">
+                                    <input type="password" name="password" id="password" value="<%= users.password %>" >
                                 </div>
                                 <p class="feedback"></p>
                             </div>
