--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -45,7 +45,7 @@
 
 <div class="button">
     <button class= btn sm btn-pink-outline>
-        <a href="">EDITAR</a>
+        <a href="/lista">EDITAR</a>
     </button>
 </div>
 
