--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -50,6 +50,11 @@
 </div>
 
 
+<form class="form is-inline" action="/admin/edit/<%= product.id %>?_method=delete" method="POST">
+    <button class="button is-danger">BORRAR</button>
+
+
+
              
 <footer>
     <%- include('../partials/footer.ejs') %>
