--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="css/carrito.css">
+    <link rel="stylesheet" href="/css/carrito.css">
 <head>
     <%- include('../partials/head.ejs') %>
 </head>
