--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -12,7 +12,9 @@
             <section>
                 <div class="columns is-centered">
                     <div class="column is-6">
+                        
                         <h1>Nuevo usuario</h1>
+
                         <form action="/users" method="POST" enctype="multipart/form-data">
 
                             <div class="field">
@@ -69,17 +71,16 @@
                                     <select name="country" id="country" required>
                                         <option value="">Selecciona un país</option>
                                         <option value="arg">Argentina</option>
-                                        <option value="chi">Chile</option>
                                         <option value="bra">Brasil</option>
+                                        <option value="chi">Chile</option>
                                         <option value="col">Colombia</option>
+                                        <option value="per">Perú</option>
                                         <option value="uru">Uruguay</option>
                                         <option value="par">Paraguay</option>
-                
+                                        <option value="otr">Otros</option>
                                     </select>
                                 </div>
 <br>
-
-
 
                                 <div class="field">
                                     <label for="category">Categoría</label>
@@ -91,8 +92,7 @@
                                         </select>
                                     </div>
                                     <p class="feedback"></p>
-                            
-
+                         
                             <div class="field">
                                 <div class="control">
                                     <input type="submit" value="Registarte">
