--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,13 +8,20 @@
 
     <%- include('partials/header.ejs') %>
     <main>
-
-     
+         
+        <h2> Sección usuario </h2>
+        <ul>
+            <li><a href="/user/2"> Tu perfil de viajero: - que el id y el nombre se pase cuando se haga el login </a> </li>
+            <li><a href="/logout">Cerra sesión </li>
+        </ul>
+              
 <h3 class="color-h3">Elegi tu próximo destino</h3>
 
       <!--primer box de fotos -->
-    
-    <div class="container1">
+            
+       
+        <br>
+        <div class="container1"></div>
     <div class="pic-container1">
   
 
