--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -18,6 +18,11 @@
             <span class="separador">|
             <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
             <a href="/index-admin">Sección para administradores</a>
+            <a href="/user/2"> Tu perfil de usuario </a> 
+                
+                <br>
+                
+            </ul>
             </div>
           </nav>
           
