--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -15,7 +15,7 @@
                 <div class="columns is-centered">
                     <div class="column is-6">
                         <h1>Editar usuario</h1>
-                        <form action="/users/<%= users.id %>?_method=PUT" method="PUT" enctype="multipart/form-data">
+                        <form action="/userList/<%= users.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
 
                             <div class="field">
                                 <label for="first_name">Nombre</label>
@@ -43,7 +43,7 @@
 
                             <div class="field">
                                 <label for="image">Imagen de perfil</label>
-                                <img src="/images/users/<%= users.image %>" alt="">
+                                <h3> Tu foto actual: </h3><img src="/images/users/<%= users.image %>" alt="">
                                 <div class="control">
                                     <input type="file" name="image" id="image">
                                 </div>
