--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -10,6 +10,7 @@
     </header>
 
         <h2>Detalle de productos</h2>
+
         <h2><%= product.title %></h2>
 
         <div class="product-info">
@@ -22,7 +23,7 @@
             <i class="fas fa-fly"></i>
 
 
-            <p>Nuestro paquete incluye;</p>
+            <p>Nuestro paquete incluye</p>
             <div class="items"><i class="fas fa-plane"></i>Avion</div>
             <div class="items"><i class="fas fa-car"></i>Traslados</div>
             <div class="items"> <i class="fas fa-concierge-bell"></i>Alojamiento</div>
