--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -30,13 +30,19 @@
             <label for="">Precio</label>
             <input type="text" name="price">
         </div>
+
         <div>
-            <div class="field">
+      <!--       <div class="field">
                 <div class="control">
                     <input type="submit" value="Crear paquete">
                 </div>
-            </div> 
-  
+            </div>  -->
+           <div class="button">
+            <button class= btn sm btn-pink-outline>
+                <a href="/lista">CREAR</a>
+            </button>
+        </div>
+
             </form>
             <br>
 
