--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -18,12 +18,27 @@
         <p><img src=" <%= product.image %>" alt=""></p>
 
         <p>Descripción del paquete: <%= product.description %> </p>
+     
+        <article class="conjunto">
+            <div class="textopaquete">
+                <h2 class="h2">Excursiones y actividades</h2>
+            </div>
+
+            <div class="itemspaquete"></div>
+            <div>
+                <ul class="lista">
+                    <li>Gastronomia</li>
+                    <li>Recorrida por los lagos</li>
+                    <li>Dia de camping</li>
+                    <li>Mountain tracking</li>
+                    <li>Salidas nocturnas</li>
+                </ul>
+            </div>
+         </article>
+     
+     
         <article class="include">
-
-            <i class="fas fa-fly"></i>
-
-
-            <p>Nuestro paquete incluye</p>
+           <p>Nuestro paquete incluye</p>
             <div class="items"><i class="fas fa-plane"></i>Avion</div>
             <div class="items"><i class="fas fa-car"></i>Traslados</div>
             <div class="items"> <i class="fas fa-concierge-bell"></i>Alojamiento</div>
