--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,7 +8,11 @@
 
     <%- include('partials/header.ejs') %>
     <main>
-         
+        <ul>
+   
+       <li> <a href="/index-admin">Sección para administradores</a></ul>
+        <li><a href="/user/2"> Tu perfil de usuario </a> </li>
+        </ul>
         <h2> Turisteando es la pagina que estabas buscando para empezar tus vacaciones por Argentina </h2>
         <div class="pic-container1">
         <ul>
