--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -64,10 +64,10 @@
         <div class="user-type">
             <p>Perfil de usuario:</p>
             <label>
-                <input type="checkbox" name="user-type" id="user-type-traveller" value="traveller"> Viajero
+                <input type="checkbox" name="2" value="2"> Viajero
             </label>
             <label>
-                <input type="checkbox" name="user-type" id="user-type-admin" value="admin" > Administrador
+                <input type="checkbox" name="1"  value="1" > Administrador
             </label>
             <div class="row">
                 <input type="submit" value="Ingresa" >
