--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -19,7 +19,7 @@
         </div>
        
         <div>
-            <label for="">Imagen</label>
+            <label for="image">Imagen</label>
             <input type="file" name="image" id="image">
         </div>
         <div>
@@ -39,7 +39,7 @@
             </div>  -->
            <div class="button">
             <button class= btn sm btn-pink-outline>
-                <a href="/lista">CREAR</a>
+               <input type="submit">CREAR
             </button>
         </div>
 
