--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -39,12 +39,12 @@
             </div>  -->
            <div class="button">
             <button class= btn sm btn-pink-outline>
-               <input type="submit">CREAR
+               <input type="submit">
             </button>
         </div>
 
             </form>
-            <br>
+           
 
 
 </main>
