--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -11,11 +11,13 @@
 
         <h2>Detalle de productos</h2>
 
+       
+
         <h2><%= product.title %></h2>
 
         <div class="product-info">
         <p>Precio: <%= product.price %> </p>
-        <p><img src=" <%= product.image %>" alt=""></p>
+        <p><img src="/lista<%= product.image %>" alt=""></p>
 
         <p>Descripción del paquete: <%= product.description %> </p>
      
@@ -47,6 +49,7 @@
             <button class= btn sm btn-pink-outline>
                 <a href="/carrito">RESERVAR</a>
             </button>
+          
         </div>
         <br>
                                             
