correcion rutas imgs/apis ok

--- a/src/views/admin/lista.ejs
+++ b/src/views/admin/lista.ejs
@@ -23,8 +23,8 @@
                     <p class='product'>
                           <a href='/lista/<%= product.id%>'>
 
-                      <figure> <img src="/lista/<%=product.image%>" height="100"/></figure>
-                
+                      <figure> <img src="images/destinos/<%=product.image%>" height="100"/></figure>
+                            
                          </a>
 
                        <h4>  #<%= product.id %> <h4>
