--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -30,7 +30,7 @@
                 <div class="paquete-item">
                     <div class="paquete-fila">
                         <div class="paqueta-pic">
-                           <a href="/lista/<%= product.id%>"><img src="<%=product.image%>" alt="picture"></a>
+                           <a href="/lista/<%= product.id%>"><img src="images/destinos/<%=product.image%>" alt="picture"></a>
 
                         </div>
                     </div>
