validaciones producto finalizadas ok

--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -60,7 +60,8 @@
 
 
 
-<!--HASTA ACA -->
+<!--HASTA ACA 
+y aca poner el if de errores para poder validar en value el old.name-->
         <div class="user-type">
             <p>Perfil de usuario:</p>
             <label>
