--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -9,13 +9,20 @@
         <%- include('../partials/header.ejs') %>
     </header>
     <main>
-     
-<h3>CREAR PAQUETE</h3>
+        
+            <h3>CREAR PAQUETE</h3>
+
+            <% if (locals.errors) { 
+                errors.forEach(error => { %>
+                <p class="feedback is-danger"><%= error.msg %></p>
+                <% }) 
+             }
+                %>
 
         <form action="/crear" method="POST" enctype="multipart/form-data"> 
         <div>
             <label for="">Titulo</label>
-            <input type="text" name="title">
+            <input type="text" name="title" value="<%= locals.old && old.title ? old.title : ''%>">
         </div>
        
         <div>
@@ -24,19 +31,20 @@
         </div>
         <div>
             <label for="">Descripción</label>
-            <input type="text" name="description">
+            <input type="text" name="description" value="<%= locals.description && old.description ? old.description : ''%>">
         </div>
         <div>
             <label for="">Precio</label>
-            <input type="text" name="price">
+            <input type="text" name="price" value="<%= locals.old && old.price ? old.price : ''%>">
         </div>
 
         <div>
-      <!--       <div class="field">
-                <div class="control">
-                    <input type="submit" value="Crear paquete">
+     <!--  <div class="field">
+         <div class="control">
+             <input type="submit" value="Crear paquete">
                 </div>
-            </div>  -->
+            </div> --> 
+
            <div class="button">
             <button class= btn sm btn-pink-outline>
                <input type="submit">
@@ -48,6 +56,7 @@
 
 
 </main>
+
     <footer>
         <%- include('../partials/footer.ejs') %>
 </footer>
