--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -49,18 +49,14 @@
         </div>
     </div>
 
-        <div>
-     <!--  <div class="field">
+        
+     <div class="field">
          <div class="control">
              <input type="submit" value="Crear paquete">
-                </div>
-            </div> --> 
-
-           <div class="button">
-            <button class= btn sm btn-pink-outline>
-               <input type="submit">
-            </button>
         </div>
+     </div> 
+
+        
 
             </form>
            
