--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -17,7 +17,7 @@
         <article class="conjunto">
         <div class="product-info">
         <figure>
-        <img src="/lista<%= product.image %>" alt=""></figure>
+        <img src="images/destinos/<%= product.image %>" alt=""/></figure>
         <h3>#<%= product.id %></h3>
        </div>
 
