--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -15,7 +15,7 @@
                 <div class="columns is-centered">
                     <div class="column is-6">
                         <h1>Editar usuario</h1>
-                        <form action="/userList/<%= users.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+                        <form action="/edit/<%= users.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
 
                             <div class="field">
                                 <label for="first_name">Nombre</label>
