--- a/src/views/admin/lista.ejs
+++ b/src/views/admin/lista.ejs
@@ -30,6 +30,7 @@
                        <h4>  #<%= product.id %> <h4>
                       <h4> <%=product.title%>  </h4>
                      <h4> <%= product.price%> </h4>
+                     
            
                          <div class="button">
                           <button class= btn sm btn-pink-outline>
@@ -43,12 +44,12 @@
                             </button>
                         </div>
                         <br>
-                        <!-- <div class="button">
+                      <!-- <div class="button">
                             <button class= btn sm btn-pink-outline>
                                 <a href="">BORRAR</a>
                             </button>
-                        </div>
-                        <hr> -->
+                        </div> -->
+                        <hr> 
                         
                         </p>
               <% }) %>
